@@ -1,7 +1,2 @@
 #! /bin/sh
-set -e
-aclocal
-autoheader
-libtoolize --copy --force
-automake --add-missing -Wall
-autoconf
+autoreconf --install --force --warnings=all
